fix wechat layout bug

--- a/Resume/index.scss
+++ b/Resume/index.scss
@@ -16,6 +16,7 @@ body {
     margin: 0;
     position: relative;
     overflow: hidden;
+    height: 100%;
     width: 100%;
     letter-spacing: 2px;
     line-height: 1.35;
